--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,25 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap');
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 html,
 body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: 'Roboto', sans-serif;
+    scroll-behavior: smooth;
 }
 
 a {
   color: inherit;
   text-decoration: none;
 }
+li{
+  list-style: none;
+}
 
 * {
+  padding: 0;
+  margin: 0;
   box-sizing: border-box;
 }
