--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -108,9 +108,9 @@
   margin-left: 0.5rem;
 }
 
-@media (max-width: 600px) {
-  .grid {
-    width: 100%;
-    flex-direction: column;
+@media (max-width: 992px) {
+  .company_card{
+    display: flex;
+    flex-wrap: wrap;
   }
 }
