--- a/components/Admin/AddAdmin.module.css
+++ b/components/Admin/AddAdmin.module.css
@@ -8,6 +8,7 @@
 }
 .admin img{
     margin-left: 50px;
+    border-radius: 30px;
 }
 .add h1{
     font-size: 40px;
@@ -35,6 +36,11 @@
         width: 100%;
         margin: 0 auto;
         margin-top: 40px;
+    }
+    .admin{
+        width: 80%;
+        margin: 0 auto;
+        margin-right: 80px;
     }
    
 }
