--- a/components/Home/RecentJobs/RecentJobs.module.css
+++ b/components/Home/RecentJobs/RecentJobs.module.css
@@ -8,9 +8,10 @@
   margin: 0 auto;
 }
 .icons {
-  font-size: 20px;
+  font-size: 15px;
   margin-right: 25px;
-  margin-bottom: 5px;
+  margin-bottom: -10px;
+  color:grey
 }
 .icon h2 {
   font-size: 17px;
