--- a/styles/globals.css
+++ b/styles/globals.css
@@ -21,3 +21,13 @@ li {
   margin: 0;
   box-sizing: border-box;
 }
+
+.chats::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.chats {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
