--- a/styles/globals.css
+++ b/styles/globals.css
@@ -22,6 +22,12 @@ li {
   box-sizing: border-box;
 }
 
-* {
-  scroll-behavior: smooth;
+.chats::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.chats {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
 }
