--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -12,6 +12,16 @@
   align-items: center;
 }
 
+.hero_cover{
+   background-image: url("../images/shape.svg"); 
+  /* background-color: #cccccc; */
+  /* height: 500px; */
+  /* opacity: 0.9; */
+  background-position: center; 
+  background-repeat: no-repeat; 
+  background-size: cover;
+}
+
 .footer {
   display: flex;
   flex: 1;
