--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -3,22 +3,27 @@
 }
 
 .main {
+  background-image: url("../images/cover.jpg"); 
+   background-position: center; 
+  background-repeat: repeat; 
+  background-size:contain;
   min-height: 100vh;
-  padding: 4rem 0;
-  flex: 1;
-  display: flex;
+   width: 100%;
+  /* padding: 4rem 0; */
+  /* flex: 1; */
+  /* display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
+  align-items: center; */
 }
 
 .hero_cover{
-   background-image: url("../images/shape.svg"); 
-  /* background-color: #cccccc; */
-  /* height: 500px; */
-  /* opacity: 0.9; */
+   background-image: url("../images/cover.jpg"); 
+  background-color: #cccccc;
+  width: 100%;
+ height: 100vh;
   background-position: center; 
-  background-repeat: no-repeat; 
+  background-repeat: repeat; 
   background-size: cover;
 }
 
