--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -24,8 +24,8 @@
   background-color: #cccccc;
   width: 100%;
  height: 100vh;
-  background-position: center; 
-  background-repeat: repeat; 
+  background-position:center; 
+  background-repeat: no-repeat; 
   background-size: cover;
 }
 
