--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -28,6 +28,11 @@
   background-repeat: no-repeat; 
   background-size: cover;
 }
+@media (min-width: 1280px) { 
+  .hero_cover{
+    margin-top: -100px;
+  }
+ }
 
 .zone_card{
   -webkit-border-radius: 50px;
