--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -21,7 +21,7 @@
 
 .hero_cover{
    background-image: url("../images/cover.jpg"); 
-  background-color: #cccccc;
+  background-color: #ebf8fe;
   width: 100%;
  height: 100vh;
   background-position:center; 
