--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -45,8 +45,8 @@ width: 220px;
 height: 150px;
 margin: 10px auto;
 padding: 0px 15px;
-/* -webkit-box-shadow: 12px 12px 24px #b2b8c9, -12px -12px 24px #f0f8ff; */
-/* box-shadow: 12px 12px 24px #ebeff5, -12px -12px 24px #dbe5ee; */
+-webkit-box-shadow: 12px 12px 24px #b2b8c9, -12px -12px 24px #f0f8ff;
+ box-shadow: 12px 12px 24px #ebeff5, -12px -12px 24px #dbe5ee;
 }
 
 .footer {
